--- a/frontend/src/Components/Achievement/Achievement.css
+++ b/frontend/src/Components/Achievement/Achievement.css
@@ -1,5 +1,6 @@
 .achievement{
   width:200px;
+  /* height: 238px; */
   transition: 0.2s;
   box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
   border-radius: 5px;
@@ -7,6 +8,7 @@
 }
 .achievement img{
   width:100%;
+  height:230px;
 }
 .achievement p{
   margin:6px 8px;
