--- a/frontend/src/Components/Achievementpage/Achievementpage.css
+++ b/frontend/src/Components/Achievementpage/Achievementpage.css
@@ -26,6 +26,7 @@
 }
 .achievementdisplay-main-img{
   width: 300px;
+  height: 350px;
   box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
   border-radius: 8px;
   transition: 0.2s;
