--- a/frontend/src/Components/Allachievements/Allachievements.css
+++ b/frontend/src/Components/Allachievements/Allachievements.css
@@ -1,33 +1,92 @@
-.allachievements{
-  width:100%;
+.allachievements {
+  width: 100%;
 }
-.achievements-main{
-  margin:30px 0px;
-  display:grid;
-  column-gap:35px;
+
+.header {
+  display: flex;
+  align-items: center;
+  gap: 35px;
+}
+
+.header h1 {
+  margin-top: 20px;
+}
+
+.search-bar-wrapper {
+  position: relative;
+  width: 280px;
+}
+
+.search-bar {
+  width: 90%;
+  padding: 8px 12px;
+  border-radius: 20px;
+  border: 1.5px solid #c1c1c1;
+  font-size: 16px;
+  outline: none;
+  transition: border-color 0.15s;
+}
+
+.search-bar:focus {
+  border-color: #5b5b5b;
+}
+
+.search-icon {
+  
+  position: absolute;
+  top: 50%;
+  right: 10px;
+  font-size: 20px;
+  transform: translateY(-50%);
+  background-color: white;
+  color: black;
+  border-radius: 50%;
+  padding: 5px;
+  pointer-events: none;
+}
+
+.achievements-main {
+  margin: 30px 0px;
+  display: grid;
+  column-gap: 35px;
   row-gap: 50px;
   width: 100%;
   grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
+  transition: all 0.3s ease-in-out; 
 }
-.allachievements-item{
-  display:flex;
+
+.allachievements-item {
+  display: flex;
   flex-direction: column;
   align-items: center;
   gap: 15px;
-  
+  opacity: 0;
+  transform: translateY(10px);
+  animation: fadeIn 0.3s forwards;
+  z-index: 0;
 }
-.allachievements-item button{
-  width:50%;
-  padding:5px;
+
+.allachievements-item button {
+  width: 50%;
+  padding: 5px;
   border-radius: 8px;
   outline: none;
   border: none;
   background: #e64646;
-  color:white;
+  color: white;
   font-family: 'Poppins';
   font-size: 16px;
   cursor: pointer;
+  transition: background-color 0.3s;
 }
-.allachievements-item button:hover{
+
+.allachievements-item button:hover {
   background-color: #c40a0a;
+}
+
+@keyframes fadeIn {
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
