--- a/frontend/src/Components/Navbar/Navbar.css
+++ b/frontend/src/Components/Navbar/Navbar.css
@@ -1,34 +1,47 @@
-.navbar{
-  height:60px;
+.navbar {
+  height: 40px;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 15px 60px;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+  padding: 15px 25px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.6);
   margin-bottom: 0px;
-  background: white;
+  background: #f0f0f0; 
   position: sticky;
-  top:0;
-  z-index: 5;
+  top: 0;
+  z-index: 6;
 }
-.nav-logo{
-  width:80px;
+
+.nav-logo {
+  width: 53px;
 }
-.admin-profile{
+
+.admin-profile {
   display: flex;
   align-items: center;
-  gap:20px;
+  gap: 20px;
 }
-.nav-profile{
-  width: 80px;
+
+.nav-profile {
+  width: 40px; 
   border-radius: 50%;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.388); 
 }
-.signout-btn{
-  padding: 8px 12px;
-  border-radius: 15px;
+
+.signout-btn {
+  padding: 6px 10px; 
+  border-radius: 20px; 
   font-size: 16px;
   outline: none;
-  border: 1.5px solid rgb(69, 68, 68);
+  border: 2px solid #454444; 
   cursor: pointer;
+  background-color: #ffffff; 
+  color: #454444; 
+  transition: background-color 0.3s, color 0.3s, border-color 0.3s;
+}
+
+.signout-btn:hover {
+  background-color: #454444; 
+  color: #ffffff; 
+  border-color: #454444; 
 }
